- fix thin gap above logo (chrome)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -164,6 +164,7 @@ header {
   }
 
   #wrapper {
+    margin-top: -2px;
     max-width: 522px;
   }
 
